# valorant-bot

./: .gitignore  New Text Document.txt  authordetails.py  checkin.py  checks.py  config.template.toml  config.toml  creditvoting.py  database.py  groupscrape.py  invertibledict.py  kayostart.py  notifications.py  notifyusers.py  pyproject.toml  randomselections.py  schema.sql  stratroulette.py  sweepstake.py  timezones.py  valbot.service  valorantbot.py  valorantranks.py  votecommands.py
games/: blackjack.py  creditgame.py
migrations/: 2021-09-16.sql  20211031220527_init.down.sql  20211031220527_init.up.sql  20211031220916_add_notify_column.down.sql  20211031220916_add_notify_column.up.sql  20211116184854_add_valorant_rank.down.sql  20211116184854_add_valorant_rank.up.sql  20220118010023_add_trigger_msg.down.sql  20220118010023_add_trigger_msg.up.sql  20220304223028_create_voicechannellog_table.down.sql  20220304223028_create_voicechannellog_table.up.sql  20220304223139_add_messagetype_column.down.sql  20220304223139_add_messagetype_column.up.sql  20220307222912_add_is_admin_column.up.sql  20220408192738_use_utc_timestamp.down.sql  20220408192738_use_utc_timestamp.up.sql  20220408200844_remove_emojis.down.sql  20220408200844_remove_emojis.up.sql  20230510011502_create_crediteventtypes_table.down.sql  20230510011502_create_crediteventtypes_table.up.sql  20230510011752_create_creditchanges_table.up.sql  20230510012205_create_creditvotes_table.down.sql  20230510012205_create_creditvotes_table.up.sql  20230515010500_change_notify_default.down.sql  (+5 more)
