[tool.poetry]
name = "valbot"
version = "0.1.0"
description = ""
authors = ["Archie Almond", "Lewis Treacy"]

[tool.poetry.dependencies]
python = "^3.9"
discord = "^1.7.3"
mysql-connector-python = "^8.0.26"
toml = "^0.10.2"
APScheduler = "^3.7.0"
nest-asyncio = "^1.5.1"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
